language/move-lang/tests/move_check/typing/module_call.exp
error[E04016]: too few arguments
   ┌─ tests/move_check/typing/module_call.move:43:18
   │
43 │         let () = X::bing(X::baz(X::bar(X::foo())));
   │                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │                  │      │
   │                  │      Found 1 argument(s) here
   │                  Invalid call of '0x2::X::bing'. The call expected 3 argument(s) but got 1

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/module_call.move:43:18
   │
 8 │     public fun baz<T1, T2>(a: T1, x: T2): (bool, T1, T2) {
   │                                           -------------- Given: '(bool, (address, u64), _)'
   ·
11 │     public fun bing(b: bool, a: address, x: u64) {
   │                        ---- Expected: 'bool'
   ·
43 │         let () = X::bing(X::baz(X::bar(X::foo())));
   │                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid call of '0x2::X::bing'. Invalid argument for parameter 'b'

error[E04016]: too few arguments
   ┌─ tests/move_check/typing/module_call.move:43:26
   │
43 │         let () = X::bing(X::baz(X::bar(X::foo())));
   │                          ^^^^^^^^^^^^^^^^^^^^^^^^
   │                          │     │
   │                          │     Found 1 argument(s) here
   │                          Invalid call of '0x2::X::baz'. The call expected 2 argument(s) but got 1

error[E04004]: expected a single non-reference type
   ┌─ tests/move_check/typing/module_call.move:43:26
   │
 5 │     public fun bar(x: u64): (address, u64) {
   │                             -------------- Expected a single non-reference type, but found: '(address, u64)'
   ·
43 │         let () = X::bing(X::baz(X::bar(X::foo())));
   │                          ^^^^^^^^^^^^^^^^^^^^^^^^ Invalid type argument

error[E04016]: too few arguments
   ┌─ tests/move_check/typing/module_call.move:44:18
   │
44 │         let () = X::bing (X::baz (X::bar (X::foo())));
   │                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │                  │       │
   │                  │       Found 1 argument(s) here
   │                  Invalid call of '0x2::X::bing'. The call expected 3 argument(s) but got 1

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/module_call.move:44:18
   │
 8 │     public fun baz<T1, T2>(a: T1, x: T2): (bool, T1, T2) {
   │                                           -------------- Given: '(bool, (address, u64), _)'
   ·
11 │     public fun bing(b: bool, a: address, x: u64) {
   │                        ---- Expected: 'bool'
   ·
44 │         let () = X::bing (X::baz (X::bar (X::foo())));
   │                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid call of '0x2::X::bing'. Invalid argument for parameter 'b'

error[E04016]: too few arguments
   ┌─ tests/move_check/typing/module_call.move:44:27
   │
44 │         let () = X::bing (X::baz (X::bar (X::foo())));
   │                           ^^^^^^^^^^^^^^^^^^^^^^^^^^
   │                           │      │
   │                           │      Found 1 argument(s) here
   │                           Invalid call of '0x2::X::baz'. The call expected 2 argument(s) but got 1

error[E04004]: expected a single non-reference type
   ┌─ tests/move_check/typing/module_call.move:44:27
   │
 5 │     public fun bar(x: u64): (address, u64) {
   │                             -------------- Expected a single non-reference type, but found: '(address, u64)'
   ·
44 │         let () = X::bing (X::baz (X::bar (X::foo())));
   │                           ^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid type argument

error[E04016]: too few arguments
   ┌─ tests/move_check/typing/module_call.move:45:18
   │
45 │         let () = X::bing (X::baz (X::bar(1)));
   │                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │                  │       │
   │                  │       Found 1 argument(s) here
   │                  Invalid call of '0x2::X::bing'. The call expected 3 argument(s) but got 1

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/module_call.move:45:18
   │
 8 │     public fun baz<T1, T2>(a: T1, x: T2): (bool, T1, T2) {
   │                                           -------------- Given: '(bool, (address, u64), _)'
   ·
11 │     public fun bing(b: bool, a: address, x: u64) {
   │                        ---- Expected: 'bool'
   ·
45 │         let () = X::bing (X::baz (X::bar(1)));
   │                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid call of '0x2::X::bing'. Invalid argument for parameter 'b'

error[E04016]: too few arguments
   ┌─ tests/move_check/typing/module_call.move:45:27
   │
45 │         let () = X::bing (X::baz (X::bar(1)));
   │                           ^^^^^^^^^^^^^^^^^^
   │                           │      │
   │                           │      Found 1 argument(s) here
   │                           Invalid call of '0x2::X::baz'. The call expected 2 argument(s) but got 1

error[E04004]: expected a single non-reference type
   ┌─ tests/move_check/typing/module_call.move:45:27
   │
 5 │     public fun bar(x: u64): (address, u64) {
   │                             -------------- Expected a single non-reference type, but found: '(address, u64)'
   ·
45 │         let () = X::bing (X::baz (X::bar(1)));
   │                           ^^^^^^^^^^^^^^^^^^ Invalid type argument

error[E04016]: too few arguments
   ┌─ tests/move_check/typing/module_call.move:46:18
   │
46 │         let () = X::bing (X::baz (@0x0, 1));
   │                  ^^^^^^^^^^^^^^^^^^^^^^^^^^
   │                  │       │
   │                  │       Found 1 argument(s) here
   │                  Invalid call of '0x2::X::bing'. The call expected 3 argument(s) but got 1

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/module_call.move:46:18
   │
 8 │     public fun baz<T1, T2>(a: T1, x: T2): (bool, T1, T2) {
   │                                           -------------- Given: '(bool, address, {integer})'
   ·
11 │     public fun bing(b: bool, a: address, x: u64) {
   │                        ---- Expected: 'bool'
   ·
46 │         let () = X::bing (X::baz (@0x0, 1));
   │                  ^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid call of '0x2::X::bing'. Invalid argument for parameter 'b'

error[E04016]: too few arguments
   ┌─ tests/move_check/typing/module_call.move:51:18
   │
51 │         let () = bing(baz(bar(foo())));
   │                  ^^^^^^^^^^^^^^^^^^^^^
   │                  │   │
   │                  │   Found 1 argument(s) here
   │                  Invalid call of '0x2::M::bing'. The call expected 3 argument(s) but got 1

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/module_call.move:51:18
   │
22 │     fun baz<T1, T2>(a: T1, x: T2): (bool, T1, T2) {
   │                                    -------------- Given: '(bool, (address, u64), _)'
   ·
25 │     fun bing(b: bool, a: address, x: u64) {
   │                 ---- Expected: 'bool'
   ·
51 │         let () = bing(baz(bar(foo())));
   │                  ^^^^^^^^^^^^^^^^^^^^^ Invalid call of '0x2::M::bing'. Invalid argument for parameter 'b'

error[E04016]: too few arguments
   ┌─ tests/move_check/typing/module_call.move:51:23
   │
51 │         let () = bing(baz(bar(foo())));
   │                       ^^^^^^^^^^^^^^^
   │                       │  │
   │                       │  Found 1 argument(s) here
   │                       Invalid call of '0x2::M::baz'. The call expected 2 argument(s) but got 1

error[E04004]: expected a single non-reference type
   ┌─ tests/move_check/typing/module_call.move:51:23
   │
19 │     fun bar(x: u64): (address, u64) {
   │                      -------------- Expected a single non-reference type, but found: '(address, u64)'
   ·
51 │         let () = bing(baz(bar(foo())));
   │                       ^^^^^^^^^^^^^^^ Invalid type argument

error[E04016]: too few arguments
   ┌─ tests/move_check/typing/module_call.move:52:18
   │
52 │         let () = bing (baz (bar (foo())));
   │                  ^^^^^^^^^^^^^^^^^^^^^^^^
   │                  │    │
   │                  │    Found 1 argument(s) here
   │                  Invalid call of '0x2::M::bing'. The call expected 3 argument(s) but got 1

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/module_call.move:52:18
   │
22 │     fun baz<T1, T2>(a: T1, x: T2): (bool, T1, T2) {
   │                                    -------------- Given: '(bool, (address, u64), _)'
   ·
25 │     fun bing(b: bool, a: address, x: u64) {
   │                 ---- Expected: 'bool'
   ·
52 │         let () = bing (baz (bar (foo())));
   │                  ^^^^^^^^^^^^^^^^^^^^^^^^ Invalid call of '0x2::M::bing'. Invalid argument for parameter 'b'

error[E04016]: too few arguments
   ┌─ tests/move_check/typing/module_call.move:52:24
   │
52 │         let () = bing (baz (bar (foo())));
   │                        ^^^^^^^^^^^^^^^^^
   │                        │   │
   │                        │   Found 1 argument(s) here
   │                        Invalid call of '0x2::M::baz'. The call expected 2 argument(s) but got 1

error[E04004]: expected a single non-reference type
   ┌─ tests/move_check/typing/module_call.move:52:24
   │
19 │     fun bar(x: u64): (address, u64) {
   │                      -------------- Expected a single non-reference type, but found: '(address, u64)'
   ·
52 │         let () = bing (baz (bar (foo())));
   │                        ^^^^^^^^^^^^^^^^^ Invalid type argument

error[E04016]: too few arguments
   ┌─ tests/move_check/typing/module_call.move:53:18
   │
53 │         let () = bing (baz (bar(1)));
   │                  ^^^^^^^^^^^^^^^^^^^
   │                  │    │
   │                  │    Found 1 argument(s) here
   │                  Invalid call of '0x2::M::bing'. The call expected 3 argument(s) but got 1

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/module_call.move:53:18
   │
22 │     fun baz<T1, T2>(a: T1, x: T2): (bool, T1, T2) {
   │                                    -------------- Given: '(bool, (address, u64), _)'
   ·
25 │     fun bing(b: bool, a: address, x: u64) {
   │                 ---- Expected: 'bool'
   ·
53 │         let () = bing (baz (bar(1)));
   │                  ^^^^^^^^^^^^^^^^^^^ Invalid call of '0x2::M::bing'. Invalid argument for parameter 'b'

error[E04016]: too few arguments
   ┌─ tests/move_check/typing/module_call.move:53:24
   │
53 │         let () = bing (baz (bar(1)));
   │                        ^^^^^^^^^^^^
   │                        │   │
   │                        │   Found 1 argument(s) here
   │                        Invalid call of '0x2::M::baz'. The call expected 2 argument(s) but got 1

error[E04004]: expected a single non-reference type
   ┌─ tests/move_check/typing/module_call.move:53:24
   │
19 │     fun bar(x: u64): (address, u64) {
   │                      -------------- Expected a single non-reference type, but found: '(address, u64)'
   ·
53 │         let () = bing (baz (bar(1)));
   │                        ^^^^^^^^^^^^ Invalid type argument

error[E04016]: too few arguments
   ┌─ tests/move_check/typing/module_call.move:54:18
   │
54 │         let () = bing (baz (@0x0, 1));
   │                  ^^^^^^^^^^^^^^^^^^^^
   │                  │    │
   │                  │    Found 1 argument(s) here
   │                  Invalid call of '0x2::M::bing'. The call expected 3 argument(s) but got 1

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/module_call.move:54:18
   │
22 │     fun baz<T1, T2>(a: T1, x: T2): (bool, T1, T2) {
   │                                    -------------- Given: '(bool, address, {integer})'
   ·
25 │     fun bing(b: bool, a: address, x: u64) {
   │                 ---- Expected: 'bool'
   ·
54 │         let () = bing (baz (@0x0, 1));
   │                  ^^^^^^^^^^^^^^^^^^^^ Invalid call of '0x2::M::bing'. Invalid argument for parameter 'b'

